# AutoQtPacker

./: CMakeLists.txt  CONFIGURATION_GUIDE.md  FIX_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow_fixed_with_output.ui  PackerTask.cpp  PackerTask.h  README.md  build.bat  build_debug.bat  build_easy.bat  build_final.bat  build_simple.bat  build_version.txt  build_with_paths.bat  diagnose.bat  main.cpp  resources.qrc  resources_fixed.qrc  test_output_directory.md  verify_fix.bat  verify_simple.bat  version.h.in
